--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,6 +52,7 @@ input{
 
 *{
     margin: 0;
+    padding: 0;
     font-family:  ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
