--- a/frontend/src/pages/signUp/signUpForm.css
+++ b/frontend/src/pages/signUp/signUpForm.css
@@ -27,12 +27,13 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
     position: relative;
 }
 
 .SignUpForm .signUp-form label{
-    width: 100%;
+    width: 77%;
     margin-inline:12% ;
     margin-top: 15px;
 }
