--- a/frontend/src/components/games/ticTacToe/ticTacPc.css
+++ b/frontend/src/components/games/ticTacToe/ticTacPc.css
@@ -47,7 +47,7 @@
     margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
-    color: white;
+    color: var(--light-bg);
   }
   .TicTacPc .button {
 
