--- a/frontend/src/pages/signUp/signUpForm.css
+++ b/frontend/src/pages/signUp/signUpForm.css
@@ -21,6 +21,7 @@
     border: none;
     background-color: transparent;
     color: var(--light-bg);
+    cursor: pointer;
 }
 
 .SignUpForm .signUp-form{
@@ -70,18 +71,20 @@
     padding: 10px 30px;
     border-radius: 50px;
     color: white;
-
+    cursor: pointer;
 }
 
 .SignUpForm .signUp-form .eye-icon{
     position: absolute;
     right: 4px;
     color: white;
+    cursor: pointer;
 }
 .SignUpForm .signUp-form .lock-icon{
     position: absolute;
     right: 22px;
     color: white;
+    cursor: pointer;
 }
 .SignUpForm .signUp-form .email-icon{
     position: absolute;
