break out check

--- a/frontend/src/pages/adminMenagment/gamesMenagment/cloudinaryGamesImgaMenagment/addImageInput.css
+++ b/frontend/src/pages/adminMenagment/gamesMenagment/cloudinaryGamesImgaMenagment/addImageInput.css
@@ -39,6 +39,7 @@
     padding: 3px;
     border-radius: 5px;
     margin:2vh;
+    color: white;
 }
 @media(width > 500px){
     .AddImageInput .imgs-preview{
