sudoku color fixing

--- a/frontend/src/components/games/sudokuGame/sudokuGameStart.css
+++ b/frontend/src/components/games/sudokuGame/sudokuGameStart.css
@@ -35,12 +35,15 @@
 
 .SudokuGameStart .exist-easy{
     background-color: lightgreen;
+    color: white;
 }
 .SudokuGameStart .exist-medium{
     background-color: lightsalmon;
+    color: white;
 }
 .SudokuGameStart .exist-hard{
     background-color: lightcoral;
+    color: white;
 }
 
 .SudokuGameStart .wrong-number{
