--- a/frontend/src/pages/adminMenagment/usersMenagment/usersMenagment.css
+++ b/frontend/src/pages/adminMenagment/usersMenagment/usersMenagment.css
@@ -4,6 +4,10 @@
     font-weight: 400;
     color: #3b3b3b;
 }
+.UsersMenagment-skeleton{
+  width: 90vw;
+  height: 70vh;
+}
 @media screen and (max-width: 700px) {
   .UsersMenagment {
     font-size: 10px;
