--- a/frontend/src/components/games/CandyCrush/CandyCrush.css
+++ b/frontend/src/components/games/CandyCrush/CandyCrush.css
@@ -5,7 +5,7 @@
     align-items: center;
     flex-direction: column;
     gap: 20px;
-    height: 750px;
+    height: 720px;
 }
 
 
@@ -17,20 +17,20 @@
 }
 
 .CandyCrush .game{
-    width: 400px;
-    height: 400px;
+    width: 360px;
+    height: 360px;
     display: flex;
     flex-wrap: wrap;
 }
 
 .CandyCrush .game .img{
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     cursor: grab;
 }
 
 .CandyCrush .score{
-    color: var(--primary);
+    color: var(--light-bg);
     font-size: 25px;
 }
 
