--- a/frontend/src/components/games/CandyCrush/Timer.css
+++ b/frontend/src/components/games/CandyCrush/Timer.css
@@ -5,7 +5,6 @@ body {
   }
   
   .base-timer {
-    margin-top: 20px;
     position: relative;
     width: 220px;
     height: 220px;
@@ -36,7 +35,7 @@ body {
   }
   
   .base-timer__path-remaining.green {
-    color: rgb(65, 184, 131);
+    color: var(--primary);
   }
   
   .base-timer__path-remaining.orange {
@@ -56,5 +55,5 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 48px;
-    color: white;
+    color: var(--light-bg);
   }
