--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,14 +9,15 @@
 }
 
 [data-theme = "dark"] {
-    --primary : #1B93FA; 
-    --secondary : #212733;
     --modal-bg : rgba(51, 51, 51, 0.5);
     --dark-bg : white ;
     --light-bg : #0C0D14;
 }
 button{
     padding-inline: 5px;
+    cursor: pointer;
+}
+select {
     cursor: pointer;
 }
 button:disabled{
