--- a/frontend/src/components/players/topPlayers.css
+++ b/frontend/src/components/players/topPlayers.css
@@ -1,7 +1,7 @@
 .TopPlayers{
     background-color: var(--dark-bg);
-    height: 30vh;
-    width: 70vw;
+    height: 60vh;
+    width: 80vw;
     padding: 30px 20px;
     border-radius: 5px;
 }
@@ -18,17 +18,102 @@
     background-color: transparent;
     font-size: 30px;
     color: white;
-    border:white 1px solid;
+    /* border:white 1px solid; */
+    border: none;
+    border-radius: 5px;
 }
 
 .TopPlayers-nav-button.selectedA{
     background-color: var(--secondary);
-    background-image: var(--gradiant-primary);
 }
 .TopPlayers-playersList{
-    display: grid;
-    grid-template-columns: repeat(10vw,70vw);
+    margin-top: 5px;
+    display: flex;
+    width: 100%;
+    max-height:50vh ;
+    overflow-y: auto;
 }
-.TopPlayers-playersList > * {
-    border:1px solid white;
+.TopPlayers-playersList-places{
+    width: 12%;
+
 }
+.TopPlayers-playersList-list{
+    width: 88%;
+}
+.TopPlayers-playersList-places-place{
+    color: var(--light-bg);
+    text-align: center;
+    font-size: 25px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+.TopPlayers-playersList-list .UsersList{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    border-radius: 10px;
+    align-content: start;
+    color: white;
+}
+
+.TopPlayers-playersList-list .UsersList .user{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 5px;
+    padding-inline: 10px;
+    height: fit-content; 
+    margin-block:5px;
+    background-color: var(--secondary);
+    border-radius: 5px;
+    color: white;
+}
+.TopPlayers-playersList-list .user .user-profile{
+    display: flex;
+    align-items: end;
+    color: white;
+}
+.TopPlayers-playersList-list .user .user-profile-img{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 5px;
+    color: var(--light-bg);
+}
+
+@media (width > 500px ){
+    .TopPlayers-playersList-places{
+        width: 10%;
+    }
+    .TopPlayers-playersList-list{
+        width: 90%;
+    }
+    .TopPlayers-playersList-list .UsersList .user p{
+        font-size: 20px;
+    }
+}
+@media (width > 700px ){
+    .TopPlayers-playersList-places{
+        width: 8%;
+    }
+    .TopPlayers-playersList-list{
+        width: 92%;
+    }
+}
+
+@media (width > 1000px){
+    
+    .TopPlayers{
+        width: 65vw;
+    }
+    .TopPlayers-playersList-places{
+        width: 5%;
+    }
+    .TopPlayers-playersList-list{
+        width: 95%;
+    }
+} 
